[gd_scene load_steps=56 format=2]

[ext_resource path="res://assets/sprites/friend_hey.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/topdown_base_walk_left_brown.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/topdown_base_walk_up_brown.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/topdown_base_walk_right_brown.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/topdown_base_walk_down_brown.png" type="Texture" id=5]
[ext_resource path="res://scenes/actors/best_friend.gd" type="Script" id=6]
[ext_resource path="res://assets/sprites/bestfriend_idle.png" type="Texture" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 7 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 3 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 3 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 5 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 5 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 5 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 5 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 5 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 7 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 7 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 2 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 4 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 4 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=37]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "idle_up",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "idle_down",
"speed": 5.0
}, {
"frames": [ SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ) ],
"loop": true,
"name": "walk_up",
"speed": 12.0
}, {
"frames": [ SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ) ],
"loop": true,
"name": "walk_down",
"speed": 12.0
}, {
"frames": [ SubResource( 19 ) ],
"loop": true,
"name": "idle_right",
"speed": 5.0
}, {
"frames": [ SubResource( 20 ) ],
"loop": true,
"name": "idle_left",
"speed": 5.0
}, {
"frames": [ SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ) ],
"loop": true,
"name": "walk_left",
"speed": 12.0
}, {
"frames": [ SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ) ],
"loop": true,
"name": "walk_right",
"speed": 12.0
} ]

[sub_resource type="CapsuleShape2D" id=38]
radius = 7.55354
height = 0.727341

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 40, 32 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 1 )
region = Rect2( 40, 0, 40, 32 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 1 )
region = Rect2( 80, 0, 40, 32 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 1 )
region = Rect2( 120, 0, 40, 32 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 40, 32 )

[sub_resource type="SpriteFrames" id=44]
animations = [ {
"frames": [ SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=45]

[sub_resource type="RectangleShape2D" id=46]

[sub_resource type="RectangleShape2D" id=47]

[sub_resource type="RectangleShape2D" id=48]

[node name="BestFriendRoot" type="YSort"]

[node name="BestFriend" type="KinematicBody2D" parent="." groups=[
"npc",
]]
script = ExtResource( 6 )

[node name="Sight" type="Area2D" parent="BestFriend"]
z_index = -1

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="BestFriend/Sight"]
polygon = PoolVector2Array( 0, 0, -16, 48, 16, 48 )

[node name="Polygon2D" type="Polygon2D" parent="BestFriend/Sight"]
color = Color( 0.568627, 1, 0, 0.239216 )
polygon = PoolVector2Array( -24, 48, 0, 0, 24, 48, 0, 48 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="BestFriend"]
frames = SubResource( 37 )
animation = "idle_down"

[node name="CollisionShape2D" type="CollisionShape2D" parent="BestFriend"]
position = Vector2( -0.198425, 5.42047 )
shape = SubResource( 38 )

[node name="Dialog" type="AnimatedSprite" parent="BestFriend"]
visible = false
position = Vector2( 24, -24 )
scale = Vector2( 0.75, 0.75 )
frames = SubResource( 44 )
playing = true

[node name="TurnPoint1" type="Area2D" parent="."]
position = Vector2( -24, 24 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="TurnPoint1"]
shape = SubResource( 45 )

[node name="TurnPoint2" type="Area2D" parent="."]
position = Vector2( 0, 24 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="TurnPoint2"]
shape = SubResource( 46 )

[node name="TurnPoint3" type="Area2D" parent="."]
position = Vector2( 24, 24 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="TurnPoint3"]
shape = SubResource( 47 )

[node name="TurnPoint4" type="Area2D" parent="."]
position = Vector2( 48, 24 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="TurnPoint4"]
shape = SubResource( 48 )
